# balance-book

./: .gitignore  .prettierrc.json  LICENSE.md  PLAID.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
server/: Dockerfile  go.mod  main.go
src/: App.css  App.tsx  main.tsx  stronghold.ts  styles.css  typeassist.ts  typedef.ts
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/account/: up.sql
src-tauri/migrations/accounts/: up.sql
src-tauri/migrations/expense/: down.sql  up.sql
src-tauri/migrations/history/: up.sql
src-tauri/migrations/income/: down.sql  up.sql
src-tauri/migrations/token/: down.sql  up.sql
src-tauri/migrations/tokens/: up.sql
src-tauri/migrations/trans/: down.sql  up.sql
src-tauri/migrations/transaction/: up.sql
src-tauri/migrations/transactions/: up.sql
src-tauri/migrations/user/: up.sql
src-tauri/migrations/users/: up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: api.rs  api_account.rs  api_accts.rs  api_token.rs  api_trans.rs  api_user.rs  api_users.rs  mod.rs  models.rs  schema.rs
src-tauri/src/dbase/: api.rs  mod.rs  models.rs  schema.rs
src-tauri/src/fin/: api.rs  auth.rs  mod.rs  models.rs
src-tauri/src/finance/: api_finance.rs  auth.rs  map.rs  mod.rs
src-tauri/src/link/: api.rs  auth.rs  mod.rs
src/component/: Activity.tsx  App.tsx  FilterMenu.tsx  Home.tsx  Menu.tsx  Nav.tsx  Sync.tsx  TreeSelect.tsx  filter.ts
src/component/account/: AccountGraph.tsx  AccountView.tsx  Accounts.tsx  AddAccount.tsx  Other.tsx  Saving.tsx  Spending.tsx
src/component/activity/: Activity.tsx  AddLog.tsx  Calendar.tsx  Filter.tsx  List.tsx  MultiLog.tsx  ViewDay.tsx  ViewLog.tsx
src/component/asset/: AccountPage.tsx  CreateAccount.tsx  EditAccount.tsx
src/component/auth/: Auth.tsx  FloatBG.tsx
src/component/base/: Activity.tsx  App.tsx  Assets.tsx  Auth.tsx  Budget.tsx  Home.tsx  Logo.tsx  Market.tsx  Nav.tsx  PlaidLinkWithOAuth.tsx  Preview.tsx  Profile.tsx  ProfileLink.tsx  Settings.tsx  Stats.tsx
src/component/home/: AddExpense.tsx  AddLog.tsx  AddTransaction.tsx  CreateLog.tsx  Expense.tsx  Float.tsx  Home.tsx  Logo.tsx  News.tsx  Preview.tsx  Transaction.tsx
src/component/link/: PlaidLink.tsx  ProfileLink.tsx
src/component/market/: Market.tsx
src/component/profile/: Financial.tsx  Link.tsx  Personal.tsx  Profile.tsx
src/component/settings/: Settings.tsx
src/component/stats/: BalanceByDay.tsx  BarGraph.tsx  BoxPlot.tsx  CategoryBar.tsx  CategoryPie.tsx  ChartBase.tsx  HeatMap.tsx  LineGraph.tsx  NetByDay.tsx  Panel.tsx  PieBurst.tsx  PieExpenseGraph.tsx  PieGraph.tsx  PieIncomeGraph.tsx  Sankey.tsx  Statistics.tsx  StatsInfo.tsx  StatsList.tsx  StatsMain.tsx  StatsPage.tsx  SunMap.tsx  TotalGraph.tsx  Tree.tsx  TreeGraph.tsx  TreeMap.tsx  ZoomChart.tsx  common_chart.ts  graph.ts
src/component/template/: Filter.tsx  FilterBar.tsx  FilterGUI.tsx  Nav.tsx  TreeSelect.tsx
src/component/transaction/: CreateLog.tsx  EditLog.tsx  EditMultiLog.tsx  ViewLog.tsx  ViewTransaction.tsx
src/routes/: BaseLayout.tsx  Disclaimer.tsx  Home.tsx  Login.tsx  Register.tsx  SetupPlaid.tsx
src/routes/Home/: AccountTools.tsx  Calendar.tsx  List.tsx  Profile.tsx  Statistics.tsx
src/styles/: AccountPage.css  Activity.css  App.css  Assets.css  Calendar.css  Filter.css  Graph.css  Home.css  List.css  Log.css  Menu.css  Nav.css  Page.css  Profile.css  Select.css  Settings.css  Stats.css  ViewDay.css  index.css  root.css
