[package]
name = "balance-book"
version = "2.0.0"
description = "Manage personal finances"
authors = ["Zane Kissel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "path-all", "shell-open", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.37.0"
diesel = { version = "2.1.6", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
rust-argon2 = "1.0"
password-hash = "0.5.0"
#argon2 = "0.5.3"
uuid = "1.8.0"
chrono = "0.4.37"
dotenv = "0.15.0"
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-oauth = "0.0.0-alpha.0"
plaid = "8.0.0"
open = "5.1.2"

##replace-for-windows-build##rusqlite = { version = "0.30.0", features = ["bundled"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
