[package]
name = "balance-book"
version = "2.5.0"
description = "Desktop application for managing personal finance"
authors = ["Zane Kissel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "balance_book_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
rust-argon2 = { version = "2.1" }
password-hash = { version = "0.5.0", features = [ "getrandom" ] }
chrono = "0.4.38"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32.0", features = ["bundled-sqlcipher"] }
plaid = "8.0.0"
open = "5.3.0"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth.git", branch = "v2" }
